fixed index.js and navbar for routing

--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -24,7 +24,7 @@
             </div>
             <button type="submit" class="btn submit-btn" >Submit</button>
         </form>
-        <p>If you dont have an account <a href="/ProjectSourceCode/src/views/pages/register.hbs"></a>register.</p>
+        <p>If you dont have an account <a href="/register"></a>register.</p>
     </div>
 </body>
 </html>
