Updated Card's CSS

--- a/ProjectSourceCode/src/resources/css/style.css
+++ b/ProjectSourceCode/src/resources/css/style.css
@@ -73,3 +73,11 @@ input[type="text"], input[type="password"] {
 .btn.submit-btn:hover {
     background-color: #17a33e;
 }
+
+/* Home Page */
+.card-equal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
