Added Cart Icon

--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -35,7 +35,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/cart">
-            <img src="/images/cart-icon.png" alt="Cart" style="height: 24px;">
+            <img src="../../resources/icons/cart_icon.png" alt="Cart" style="height: 24px;">
           </a>
         </li>
       </ul>
