--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -11,7 +11,7 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
         <p class="mt-3">Don't have an account? <a href="/register">Register</a></p>
         </div>
