--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -26,6 +26,7 @@
                 <input type="number" id="quantity-{{this.id}}" name="quantity" class="form-control" value="1" min="1">
               </div>
               <button type="submit" class="btn btn-primary">Add to Cart</button>
+              <button type="submit" class="btn btn-primary">Favorite</button>
             </form>
           </div>
         </div>
