--- a/ProjectSourceCode/src/views/partials/header.hbs
+++ b/ProjectSourceCode/src/views/partials/header.hbs
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {{> title}}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../../resources/css/style.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="../../resources/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../../resources/icons/favicon-32x32.png">
