--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -26,7 +26,20 @@
                 <input type="number" id="quantity-{{this.id}}" name="quantity" class="form-control" value="1" min="1">
               </div>
               <button type="submit" class="btn btn-primary">Add to Cart</button>
-              <button type="submit" class="btn btn-primary">Favorite</button>
+            </form>
+            <form action="/add-to-favorites" method="POST" class="mt-auto"> <!-- add to favorites button -->
+                <input type="hidden" name="content_type" value="{{this.content_type}}">
+                <input type="hidden" name="title" value="{{this.title}}">
+                <input type="hidden" name="director" value="{{this.director}}">
+                <input type="hidden" name="release_year" value="{{this.release_year}}">
+                <input type="hidden" name="genre" value="{{this.genre}}">
+                <input type="hidden" name="format" value="{{this.format}}">
+                <input type="hidden" name="price" value="10.00"> <!-- Adjust the price as needed -->
+                {{#if (includes ../favoriteTitles this.title)}} <!-- chang color based on existence in favorites -->
+                <button type="button" class="btn btn-secondary" disabled>Favorited</button>
+                {{else}}
+                <button type="submit" class="btn btn-primary">Favorite</button>
+                {{/if}}
             </form>
           </div>
         </div>
