--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -8,6 +8,9 @@
                         Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/library">Library</a>
+                    </li>                    
+                    <li class="nav-item">
                         <a class="nav-link" href="/favorites">Favorites</a>
                     </li>
                     <li class="nav-item dropdown">
