--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -19,22 +19,26 @@
             <p class="card-text"><strong>Genre:</strong> {{this.genre}}</p>
             <p class="card-text"><strong>Format:</strong> {{this.format}}</p>
 
-            <form action="/add-to-library" method="POST" class="mt-auto"> <!-- TEMPORARY TEST: add-to-cart directly adds item to library - original intended route: "/add-to-cart", change back once cart is functional -->
+            <!--<form action="/add-to-library" method="POST" class="mt-auto"> <!-- TEMPORARY TEST: add-to-cart directly adds item to library - original intended route: "/add-to-cart", change back once cart is functional --><!--
               <input type="hidden" name="content_type" value="{{this.content_type}}">
               <input type="hidden" name="title" value="{{this.title}}">
               <input type="hidden" name="director" value="{{this.director}}">
               <input type="hidden" name="release_year" value="{{this.release_year}}">
               <input type="hidden" name="genre" value="{{this.genre}}">
               <input type="hidden" name="format" value="{{this.format}}">
-              <input type="hidden" name="price" value="10.00"> <!-- Adjust the price as needed -->
-
+              <input type="hidden" name="price" value="10.00"> <!-- Adjust the price as needed --><!-- 
               <div class="form-group">
                 <label for="quantity-{{this.id}}">Quantity:</label>
                 <input type="number" id="quantity-{{this.id}}" name="quantity" class="form-control" value="1" min="1">
-              </div>
-
+              </div> 
               <button type="submit" class="btn btn-primary">Add to Cart</button>
+            </form>-->
+
+            <form action="/add-to-cart" method="post">
+                <input type="hidden" name="contentId" value="{{this.content_id}}">
+                <button type="submit" class="btn btn-primary">Add to Cart</button>
             </form>
+
             <form action="/add-to-favorites" method="POST" class="mt-auto"> <!-- add to favorites button -->
                 <input type="hidden" name="content_type" value="{{this.content_type}}">
                 <input type="hidden" name="title" value="{{this.title}}">
