--- a/ProjectSourceCode/src/views/pages/searchResults.hbs
+++ b/ProjectSourceCode/src/views/pages/searchResults.hbs
@@ -23,7 +23,7 @@
 
     <div class="container mt-5">
     <h2 class="mb-4">Search Results</h2>
-    <div class="row">
+    <div id="search-results" class="row">
         {{#each results}}
         <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div class="card card-equal">
