--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -11,7 +11,7 @@
                     </li>
                 </ul>
                 <form class="d-flex" style="width: 42%" action="/search" method="get">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input id="search-query" class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success me-2" type="submit">Search</button>
                     <button class="btn btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#filterModal">Filter</button>
                 </form>
@@ -48,7 +48,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form id="filterForm" action="/search" method="get">
+                <form id="filterForm">
                     <div class="mb-3">
                         <label for="genre" class="form-label">Genre</label>
                         <select class="form-select" id="genre" name="genre">
@@ -81,3 +81,70 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<script>
+  let debounceTimeout;
+
+  function debounce(func, delay) {
+    return function() {
+      clearTimeout(debounceTimeout);
+      debounceTimeout = setTimeout(() => func.apply(this, arguments), delay);
+    };
+  }
+
+  function performSearch() {
+    const query = document.getElementById('search-query').value;
+    const genre = document.getElementById('genre').value;
+    const format = document.getElementById('format').value;
+    const year = document.getElementById('year').value;
+
+    fetch(`/search?query=${query}&genre=${genre}&format=${format}&year=${year}`)
+      .then(response => response.json())
+      .then(data => renderResults(data))
+      .catch(error => console.error('Error:', error));
+  }
+
+  function applyFilters() {
+    debounce(performSearch, 300)();
+  }
+
+  function renderResults(data) {
+    const resultsContainer = document.getElementById('search-results');
+    resultsContainer.innerHTML = '';
+
+    data.forEach(item => {
+      const card = document.createElement('div');
+      card.className = 'col-md-3 mb-4 d-flex align-items-stretch';
+      card.innerHTML = `
+        <div class="card card-equal">
+          <img src="/resources/img/${item.title}.jpg" class="card-img-top" alt="${item.title}">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">${item.title}</h5>
+            <p class="card-text"><strong>Director:</strong> ${item.director}</p>
+            <p class="card-text"><strong>Year:</strong> ${item.release_year}</p>
+            <p class="card-text"><strong>Genre:</strong> ${item.genre}</p>
+            <p class="card-text"><strong>Format:</strong> ${item.format}</p>
+            <p class="card-text"><strong>Price:</strong> $${item.price}</p>
+            
+            <form action="/add-to-cart" method="POST" class="mt-auto">
+              <input type="hidden" name="contentId" value="${item.content_id}">
+              <button type="submit" class="btn btn-primary">Add to Cart</button>
+            </form>
+
+            <form action="/add-to-favorites" method="POST" class="mt-2">
+              <input type="hidden" name="content_type" value="${item.content_type}">
+              <input type="hidden" name="title" value="${item.title}">
+              <input type="hidden" name="director" value="${item.director}">
+              <input type="hidden" name="release_year" value="${item.release_year}">
+              <input type="hidden" name="genre" value="${item.genre}">
+              <input type="hidden" name="format" value="${item.format}">
+              <input type="hidden" name="price" value="${item.price}">
+              <button type="submit" class="btn btn-primary">Favorite</button>
+            </form>
+          </div>
+        </div>
+      `;
+      resultsContainer.appendChild(card);
+    });
+  }
+</script>
