--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -25,6 +25,9 @@
                             <li><a class="dropdown-item" href="/genre/romance">Romance</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/selling">Selling</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                   {{#if user}}
