--- a/ProjectSourceCode/src/views/pages/searchResults.hbs
+++ b/ProjectSourceCode/src/views/pages/searchResults.hbs
@@ -24,10 +24,9 @@
     <div class="container mt-5">
     <h2 class="mb-4">Search Results</h2>
     <div id="search-results" class="row">
-        {{#each results}}
+        {{#each content}}
         <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div class="card card-equal">
-                <img src="/resources/img/{{this.title}}.jpg" class="card-img-top" alt="{{this.title}}">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">{{this.title}}</h5>
                     <p class="card-text"><strong>Director:</strong> {{this.director}}</p>
