--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -48,25 +48,27 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form id="filterForm">
+                <form id="filterForm" action="/filter" method="post">
                     <div class="mb-3">
                         <label for="genre" class="form-label">Genre</label>
                         <select class="form-select" id="genre" name="genre">
                             <option value="">Select Genre</option>
-                            <option value="action">Action</option>
-                            <option value="comedy">Comedy</option>
-                            <option value="drama">Drama</option>
-                            <option value="horror">Horror</option>
-                            <option value="romance">Romance</option>
+                            <option value="Action">Action</option>
+                            <option value="Comedy">Comedy</option>
+                            <option value="Drama">Drama</option>
+                            <option value="Horror">Horror</option>
+                            <option value="Romance">Romance</option>
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="format" class="form-label">Format</label>
                         <select class="form-select" id="format" name="format">
                             <option value="">Select Format</option>
-                            <option value="dvd">DVD</option>
-                            <option value="blu-ray">Blu-ray</option>
-                            <option value="digital">Digital</option>
+                            <option value="DVD">DVD</option>
+                            <option value="Blu-ray">Blu-ray</option>
+                            <option value="Digital">Digital</option>
+                            <option value="Hardcover">Hardcover</option>
+                            <option value="Cartridge">Cartridge</option>
                         </select>
                     </div>
                     <div class="mb-3">
