--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -7,7 +7,13 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/library">Library</a>
+                    </li>  
+                    <li class="nav-item">
                         <a class="nav-link" href="/favorites">Favorites</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/selling">Selling</a>
                     </li>
                 </ul>
                 <form class="d-flex" style="width: 42%" action="/search" method="get">
