--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -4,31 +4,23 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">
-                        Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/library">Library</a>
-                    </li>                    
+                    </li>  
                     <li class="nav-item">
                         <a class="nav-link" href="/favorites">Favorites</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Genre
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/genre/action">Action</a></li>
-                            <li><a class="dropdown-item" href="/genre/comedy">Comedy</a></li>
-                            <li><a class="dropdown-item" href="/genre/drama">Drama</a></li>
-                            <li><a class="dropdown-item" href="/genre/horror">Horror</a></li>
-                            <li><a class="dropdown-item" href="/genre/romance">Romance</a></li>
-                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/selling">Selling</a>
                     </li>
                 </ul>
+                <form class="d-flex" style="width: 42%" action="/search" method="get">
+                    <input id="search-query" class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success me-2" type="submit">Search</button>
+                    <button class="btn btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#filterModal">Filter</button>
+                </form>
                 <ul class="navbar-nav ml-auto">
                   {{#if user}}
                     <li class="nav-item">
@@ -52,3 +44,119 @@
         </div>
     </nav>
 </header>
+
+<!-- Filter Modal -->
+<div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="filterModalLabel">Filter</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="filterForm" action="/filter" method="post">
+                    <div class="mb-3">
+                        <label for="genre" class="form-label">Genre</label>
+                        <select class="form-select" id="genre" name="genre">
+                            <option value="">Select Genre</option>
+                            <option value="Action">Action</option>
+                            <option value="Comedy">Comedy</option>
+                            <option value="Drama">Drama</option>
+                            <option value="Horror">Horror</option>
+                            <option value="Romance">Romance</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="format" class="form-label">Format</label>
+                        <select class="form-select" id="format" name="format">
+                            <option value="">Select Format</option>
+                            <option value="DVD">DVD</option>
+                            <option value="Blu-ray">Blu-ray</option>
+                            <option value="Digital">Digital</option>
+                            <option value="Hardcover">Hardcover</option>
+                            <option value="Cartridge">Cartridge</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="year" class="form-label">Year</label>
+                        <input type="number" class="form-control" id="year" name="year" placeholder="Enter Year">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Apply Filters</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<script>
+  let debounceTimeout;
+
+  function debounce(func, delay) {
+    return function() {
+      clearTimeout(debounceTimeout);
+      debounceTimeout = setTimeout(() => func.apply(this, arguments), delay);
+    };
+  }
+
+  function performSearch() {
+    const query = document.getElementById('search-query').value;
+    const genre = document.getElementById('genre').value;
+    const format = document.getElementById('format').value;
+    const year = document.getElementById('year').value;
+
+    fetch(`/search?query=${query}&genre=${genre}&format=${format}&year=${year}`)
+      .then(response => response.json())
+      .then(data => renderResults(data))
+      .catch(error => console.error('Error:', error));
+  }
+
+  function applyFilters() {
+    debounce(performSearch, 300)();
+  }
+
+  function renderResults(data) {
+    const resultsContainer = document.getElementById('search-results');
+    resultsContainer.innerHTML = '';
+
+    data.forEach(item => {
+      const card = document.createElement('div');
+      card.className = 'col-md-3 mb-4 d-flex align-items-stretch';
+      card.innerHTML = `
+            <div class="card card-equal">
+                <img src="/resources/img/{{this.title}}.jpg" class="card-img-top" alt="{{this.title}}">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">{{this.title}}</h5>
+                    <p class="card-text"><strong>Director:</strong> {{this.director}}</p>
+                    <p class="card-text"><strong>Year:</strong> {{this.release_year}}</p>
+                    <p class="card-text"><strong>Genre:</strong> {{this.genre}}</p>
+                    <p class="card-text"><strong>Format:</strong> {{this.format}}</p>
+                    <p class="card-text"><strong>Price:</strong> ${{this.price}}</p>
+                    
+                    <form action="/add-to-cart" method="POST" class="mt-auto">
+                        <input type="hidden" name="contentId" value="{{this.content_id}}">
+                        <button type="submit" class="btn btn-primary">Add to Cart</button>
+                    </form>
+
+                    <form action="/add-to-favorites" method="POST" class="mt-2">
+                        <input type="hidden" name="content_type" value="{{this.content_type}}">
+                        <input type="hidden" name="title" value="{{this.title}}">
+                        <input type="hidden" name="director" value="{{this.director}}">
+                        <input type="hidden" name="release_year" value="{{this.release_year}}">
+                        <input type="hidden" name="genre" value="{{this.genre}}">
+                        <input type="hidden" name="format" value="{{this.format}}">
+                        <input type="hidden" name="price" value="{{this.price}}">
+                        {{#if (includes ../favoriteTitles this.title)}}
+                        <button type="button" class="btn btn-secondary" disabled>Favorited</button>
+                        {{else}}
+                        <button type="submit" class="btn btn-primary">Favorite</button>
+                        {{/if}}
+                    </form>
+                </div>
+            </div>
+      `;
+      resultsContainer.appendChild(card);
+    });
+  }
+</script>
