--- a/ProjectSourceCode/src/views/pages/library.hbs
+++ b/ProjectSourceCode/src/views/pages/library.hbs
@@ -21,7 +21,7 @@
 
             <form action="/remove-from-library" method="POST" class="mt-auto">
                 <input type="hidden" name="title" value="{{this.title}}">
-                <button type="submit" class="btn btn-primary">Remove (WIP)</button>
+                <button type="submit" class="btn btn-primary">Remove from Library</button>
             </form>
           </div>
         </div>
